[workspace]
resolver = "2"

members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"client/relay-chain-minimal-node",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachain",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/statemint",
	"parachains/runtimes/assets/statemine",
	"parachains/runtimes/assets/westmint",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/testing/penpal",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[patch."https://github.com/paritytech/substrate"]
binary-merkle-tree = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
extrinsic-shuffler = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
fork-tree = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-election-provider-solution-type = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-election-provider-support = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-executive = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-remote-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-support-procedural = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-support-procedural-tools = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-system-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
frame-try-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
mangata-support = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
mangata-types = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
mmr-gadget = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
mmr-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-alliance = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-asset-tx-payment = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-assets = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-aura = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-bags-list = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-beefy-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-bounties = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-child-bounties = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-collective = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-contracts = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-contracts-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-contracts-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-conviction-voting = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-democracy = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-elections-phragmen = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-fast-unstake = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-identity = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-im-online = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-indices = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-membership = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-multisig = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-nfts = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-nfts-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-nis = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-nomination-pools = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-offences = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-offences-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-preimage = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-proxy = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-ranked-collective = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-recovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-referenda = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-scheduler = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-session = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-session-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-society = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-staking = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-staking-reward-fn = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-staking-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-state-trie-migration = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-sudo = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-tips = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-treasury = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-uniques = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-vesting = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
pallet-whitelist = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-allocator = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-basic-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-block-builder-ver = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-chain-spec = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-chain-spec-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-client-db = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-beefy-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-grandpa-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-executor = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-executor-common = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-executor-wasmi = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-executor-wasmtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-informant = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-network = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-network-bitswap = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-network-common = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-network-gossip = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-network-light = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-network-sync = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-network-transactions = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-peerset = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-proposer-metrics = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-rpc-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-rpc-server = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-rpc-spec-v2 = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-state-db = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-storage-monitor = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-sysinfo = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-telemetry = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sc-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-api-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-application-crypto = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-arithmetic = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-consensus-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-consensus-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-core-hashing = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-core-hashing-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-database = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-debug-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-metadata-ir = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-mmr-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-npos-elections = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-panic-handler = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-runtime-interface = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-serializer = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-session = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-staking = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-state-machine = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-storage = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-ver = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-version = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-version-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-wasm-interface = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
sp-weights = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-build-script-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-rpc-client = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-state-trie-migration-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-test-client = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-test-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-test-utils-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
substrate-wasm-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
try-runtime-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }
ver-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop-v0.9.42" }

[patch."https://github.com/paritytech/polkadot"]
kusama-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
pallet-xcm = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
pallet-xcm-benchmarks = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-approval-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-availability-bitfield-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-availability-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-availability-recovery = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-cli = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-client = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-collator-protocol = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-core-primitives = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-dispute-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-erasure-coding = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-gossip-support = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-network-bridge = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-collation-generation = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-approval-voting = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-av-store = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-backing = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-bitfield-signing = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-candidate-validation = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-chain-api = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-chain-selection = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-dispute-coordinator = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-parachains-inherent = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-provisioner = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-pvf = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-pvf-checker = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-pvf-worker = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-core-runtime-api = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-jaeger = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-metrics = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-network-protocol = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-primitives = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-subsystem = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-subsystem-test-helpers = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-subsystem-types = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-node-subsystem-util = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-overseer = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-parachain = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-primitives = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-rpc = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-runtime = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-runtime-common = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-runtime-metrics = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-runtime-parachains = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-service = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-statement-distribution = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-statement-table = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-test-client = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-test-runtime = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
polkadot-test-service = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
rococo-runtime = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
rococo-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
slot-range-helper = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
test-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
tracing-gum = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
tracing-gum-proc-macro = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
westend-runtime-constants = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
xcm = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
xcm-builder = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
xcm-executor = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
xcm-procedural = { git = "https://github.com/mangata-finance/polkadot", branch = "develop-v0.9.42" }
